<resources>
    <string name="app_name">Anime News Network Api Demo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_anime_detail">AnimeDetailActivity</string>
    <string name="clear_search">Clear Search</string>
    <string name="score">Score: %1$s</string>
    <string name="episodes"> Episodes: %1$s</string>
    <string name="genres">Genres: %1$s</string>
    <string name="themes">Themes: %1$s</string>
    <string name="link">full details: %1$s</string>

</resources>
